Add image categorize script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,14 @@ dependencies = [
     "fastapi>=0.117.1",
     "files-to-prompt>=0.6",
     "numpy==1.26.4",
+    "pillow>=10.0.0",
     "psutil>=7.1.0",
     "regex>=2025.9.1",
     "setuptools>=80.9.0",
     "tiktoken>=0.11.0",
     "tokenizers>=0.22.0",
     "torch>=2.9.0",
+    "torchvision>=0.19.0",
     "triton>=3.5.0",
     "uvicorn>=0.36.0",
     "wandb>=0.21.3",
