--- a/myscripts/Dockerfile
+++ b/myscripts/Dockerfile
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y \
     python3.12 \
     python3.12-dev \
     python3.12-venv \
+    python3-pip \
     curl \
     git \
     build-essential \
