--- a/myscripts/Dockerfile
+++ b/myscripts/Dockerfile
@@ -15,12 +15,13 @@ RUN apt-get update && apt-get install -y \
     wget \
     && rm -rf /var/lib/apt/lists/*
 
+# wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2404/sbsa/cuda-ubuntu2404.pin
 # wget https://developer.download.nvidia.com/compute/cuda/13.0.2/local_installers/cuda-repo-ubuntu2404-13-0-local_13.0.2-580.95.05-1_arm64.deb && \
 
 COPY data/cuda-repo-ubuntu2404-13-0-local_13.0.2-580.95.05-1_arm64.deb ./
+COPY data/cuda-ubuntu2404.pin ./
 
-RUN wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2404/sbsa/cuda-ubuntu2404.pin && \
-    mv cuda-ubuntu2404.pin /etc/apt/preferences.d/cuda-repository-pin-600 && \
+RUN mv cuda-ubuntu2404.pin /etc/apt/preferences.d/cuda-repository-pin-600 && \
     dpkg -i cuda-repo-ubuntu2404-13-0-local_13.0.2-580.95.05-1_arm64.deb && \
     cp /var/cuda-repo-ubuntu2404-13-0-local/cuda-*-keyring.gpg /usr/share/keyrings/ && \
     apt-get update && \
@@ -36,21 +37,26 @@ ENV PATH="/root/.cargo/bin:/root/.local/bin:${PATH}"
 
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 
-RUN uv venv --python 3.12 --with-pip .venv && \
-    source .venv/bin/activate && \
+WORKDIR /app
+
+SHELL ["/bin/bash", "-c"]
+
+RUN uv venv --python 3.12 .venv && \
+    . .venv/bin/activate && \
     python -m ensurepip --upgrade && \
     python -m pip install --upgrade pip && \
     which python && \
     which pip
 
-RUN pip install torch torchvision --index-url https://download.pytorch.org/whl/cu130
-
-WORKDIR /app
-
-COPY . .
+RUN . .venv/bin/activate && \
+    pip install torch torchvision --index-url https://download.pytorch.org/whl/cu130
 
 COPY pyproject.toml README.md ./
+COPY uv.lock ./
 COPY rustbpe ./rustbpe
+COPY nanochat nanochat
+COPY mynotes mynotes
+COPY myscripts myscripts
 
 RUN uv sync --extra gpu --group dev
 
